--- a/temp_public/css/main.css
+++ b/temp_public/css/main.css
@@ -51,131 +51,25 @@ body {
   filter: blur(10px);
 }
 
-/* Navbar Section */
-
+/*----------------------------Defaults--------------------------------*/
+/*---------------------------------------------
+navbar
+---------------------------------------------*/
 .logo {
-  color: #ffffff;
+    color: #ffffff;
 }
 
-.login-btn, .signup-btn {
-  opacity: .9;
-  font-size: 20px;
-  margin-right: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 125px;
+@media (max-width: 420px) {
+    /*---------------------------------------------
+    navbar
+    ---------------------------------------------*/
+    .navbar {
+        width: 100%;
+        opacity: .85;
+        background-color: #212121;
+        display: flex;
+    }
 }
-
-.signup-btn {
-  background-color: #28a745;
-}
-
-.navbar {
-  position: absolute;
-  width: 100%;
-  opacity: .85;
-  background-color: #212121;
-  z-index: 1;
-
-  display: -webkit-flex;
-  display: flex;
-}
-
-.nav-left {
-  flex: 1;
-  margin: 10px 20px 10px 20px;
-}
-
-.demo-login {
-    display: flex;
-    margin-right: 20px;
-}
-
-.demo-login input {
-    margin-top: 10px;
-    height: 40px;
-    font-size: 16px;
-    width: 150px;
-}
-
-.nav-right {
-  margin: 10px 20px 10px 20px;
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-}
-
-.nav-loggedOut {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-}
-
-.nav-loggedIn {
-  position: relative;
-  display: flex;
-  display: -webkit-flex;
-  width: 200px;
-}
-
-.nav-loggedIn>h3 {
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-}
-
-.nav-dropdown {
-  width:  50px;
-  height: 50px;
-  display: flex;
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  justify-content: space-between;
-}
-
-.nav-dropdown:hover{
-  opacity: .6;
-}
-
-.nav-drop-line {
-  width: 100%;
-  height: 8px;
-  background-color: #ffffff;
-}
-
-.drop-menu {
-  position: absolute;
-  right: 0;
-  top: 79px;
-  width: 250px;
-  background-color: #212121;
-  /* background-color: rgba(33,33,33, .6); */
-  border-radius: 0 0 0 10px;
-  display: none;
-}
-
-.drop-menu li:hover {
-  opacity: .5;
-}
-
-.drop-menu li>a {
-  color: #ffffff;
-}
-
-.drop-menu li {
-  color: #ffffff;
-  font-size: 26px;
-  padding: 7px 0;
-  display: flex;
-  justify-content: center;
-  border-bottom: 1px solid #4c4c4c;
-}
-
-.drop-menu li:last-child {
-  border: none;
-}
-
 /* Index page */
 .hero {
   height: 100%;
