--- a/client/main.scss
+++ b/client/main.scss
@@ -3,6 +3,9 @@
 $btnBg: #42f4d4;
 $navBg: rgba(15, 10, 10, .85);
 $transparentBg: rgba(0, 0, 0, 0);
+$greyBorder: #95989A;
+$info: #06D4FF;
+$link: #005DFF;
 
 @keyframes navDropdown {
     from {
@@ -101,6 +104,63 @@ Landing Page
     align-self: center;
     margin: 15px 0;
 }
+/*------------------------------------------------------------
+Signup page
+-------------------------------------------------------------*/
+.signup {
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url('./images/john-mark-kuznietsov-266553.jpg');
+    background-size: cover;
+}
+.signup-container {
+    border: 1px solid $greyBorder;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, .9);
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+}
+.signup-container h2 {
+    text-align: center;
+    margin: 20px 0;
+}
+.signup-container .error-msg-container {
+    width: 100%;
+    height: 45px;
+    border-top: 1px solid $greyBorder;
+    padding: 5px 25px;
+}
+.signup-container form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+}
+.signup-container input:not([type=submit]) {
+    border: 1px solid $greyBorder;
+    font-size: 28px;
+    padding: 5px 15px;
+    border-radius: 25px;
+    margin: 5px 0;
+}
+.signup-container input[type="submit"] {
+    font-size: 28px;
+    color: white;
+    padding: 5px;
+    margin: 10px 0;
+    background-color: $info;
+}
+.signup-container a {
+    color: $link;
+    font-size: 16px;
+    margin-bottom: 40px;
+    align-self: center;
+}
+
 //--------------------------------------------------------------
 //Mobile View
 @media (max-width: 420px) {
@@ -174,6 +234,12 @@ Landing Page
         background-position: center;
         background-size: 265%;
         padding: 0 15px;
+    }
+    /*------------------------------------------------------------
+    Signup page
+    -------------------------------------------------------------*/
+    .signup {
+        padding: 0 30px;
     }
 }
 
