--- a/client/main.scss
+++ b/client/main.scss
@@ -166,7 +166,67 @@ Signup page
     margin-bottom: 40px;
     align-self: center;
 }
-
+/*------------------------------------------------------------
+Login page
+-------------------------------------------------------------*/
+.login {
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url('./images/john-mark-kuznietsov-266553.jpg');
+    background-size: cover;
+}
+.login-container {
+    border: 1px solid $greyBorder;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, .9);
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+}
+.login-container h2 {
+    text-align: center;
+    margin: 20px 0;
+}
+.login-container .error-msg-container {
+    width: 100%;
+    height: 45px;
+    border-top: 1px solid $greyBorder;
+    padding: 5px 25px;
+}
+.error-msg-container h4 {
+    text-align: center;
+    color: $err;
+    margin: 5px 0;
+}
+.login-container form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+}
+.login-container input:not([type=submit]) {
+    border: 1px solid $greyBorder;
+    font-size: 28px;
+    padding: 5px 15px;
+    border-radius: 25px;
+    margin: 5px 0;
+}
+.login-container input[type="submit"] {
+    font-size: 28px;
+    color: white;
+    padding: 5px;
+    margin: 10px 0;
+    background-color: $info;
+}
+.login-container a {
+    color: $link;
+    font-size: 16px;
+    margin-bottom: 40px;
+    align-self: center;
+}
 //--------------------------------------------------------------
 //Mobile View
 @media (max-width: 420px) {
