--- a/client/main.scss
+++ b/client/main.scss
@@ -307,6 +307,95 @@ Login page
     .signup {
         padding: 0 30px;
     }
+    /*------------------------------------------------------------
+    Login page
+    -------------------------------------------------------------*/
+    .login {
+        padding: 0 30px;
+    }
+    /*------------------------------------------------------------
+    Dashboard
+    -------------------------------------------------------------*/
+    .dash-m {
+    }
+    .dash-head {
+        width: 100%;
+        height: 100px;
+        border: 1px solid red;
+    }
+    .dash-nav-container {
+        width: 100%;
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid green;
+    }
+    .dash-nav-container select {
+        border: 1px solid $greyBorder;
+        font-size: 20px;
+        padding: 5px;
+    }
+    //----- dash groups
+    .dash-groups {
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .dash-groups button {
+        font-size: 17px;
+        width: 200px;
+        padding: 8px 0;
+        align-self: center;
+        margin: 15px 0;
+    }
+    .create-group-form-container {
+        margin-bottom: 30px;
+    }
+    .create-group-form-container form {
+        display: flex;
+        flex-direction: column;
+    }
+    .create-group-form-container form div {
+        display: flex;
+        justify-content: space-around;
+    }
+    .create-group-form-container form div input{
+        width: 110px;
+        padding: 7px 0;
+    }
+    .create-group-form-container input {
+        font-size: 15px;
+    }
+    .create-group-form-container input[type="text"] {
+        border: 1px solid $greyBorder;
+        border-radius: 15px;
+        padding: 5px 20px;
+        font-size: 17px;
+        margin: 20px 0;
+    }
+    .dash-groups-headers {
+        display: flex;
+        border-bottom: 1px solid $greyBorder;
+    }
+    .groups-list li {
+        display: flex;
+        margin: 10px 0;
+    }
+    .d-g-left {
+        width: 70%;
+    }
+    .d-g-right {
+        width: 30%;
+        display: flex;
+        justify-content: space-between;
+    }
+    li>.d-g-right {
+        padding-left: 10px;
+        padding-right: 20px;
+    }
+
 }
 
 //--------------------------------------------------------------
