--- a/client/main.scss
+++ b/client/main.scss
@@ -7,6 +7,8 @@ $greyBorder: #95989A;
 $info: #06D4FF;
 $link: #005DFF;
 $err: #FF0000;
+$success: #03EB60;
+$cancel: #d9534f;
 
 @keyframes navDropdown {
     from {
@@ -39,6 +41,7 @@ h2, h3, h4, h5, h6, p{
 
 a {
     text-decoration: none;
+    color: #95989A;
 }
 
 ul {
@@ -349,6 +352,8 @@ Login page
         padding: 8px 0;
         align-self: center;
         margin: 15px 0;
+        background-color: #FF8181;
+        color: white;
     }
     .create-group-form-container {
         margin-bottom: 30px;
@@ -364,6 +369,14 @@ Login page
     .create-group-form-container form div input{
         width: 110px;
         padding: 7px 0;
+    }
+    .create-group-form-container form div input:first-child{
+        background-color: $success;
+        color: white;
+    }
+    .create-group-form-container form div input:last-child {
+        background-color: $cancel;
+        color: white;
     }
     .create-group-form-container input {
         font-size: 15px;
@@ -395,7 +408,20 @@ Login page
         padding-left: 10px;
         padding-right: 20px;
     }
-
+    //----- dash borrowed books
+    .dash-borrowed-books {
+        padding: 30px;
+    }
+    .dash-borrowed-books div:first-child {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid $greyBorder;
+    }
+    .dash-borrowed-books div:last-child li{
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 0;
+    }
 }
 
 //--------------------------------------------------------------
