--- a/public/main.css
+++ b/public/main.css
@@ -21,7 +21,8 @@ h2, h3, h4, h5, h6, p {
   color: #95989A; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #95989A; }
 
 ul {
   list-style: none; }
@@ -305,7 +306,9 @@ Login page
     width: 200px;
     padding: 8px 0;
     align-self: center;
-    margin: 15px 0; }
+    margin: 15px 0;
+    background-color: #FF8181;
+    color: white; }
   .create-group-form-container {
     margin-bottom: 30px; }
   .create-group-form-container form {
@@ -315,8 +318,14 @@ Login page
     display: flex;
     justify-content: space-around; }
   .create-group-form-container form div input {
-    width: 130px;
+    width: 110px;
     padding: 7px 0; }
+  .create-group-form-container form div input:first-child {
+    background-color: #03EB60;
+    color: white; }
+  .create-group-form-container form div input:last-child {
+    background-color: #d9534f;
+    color: white; }
   .create-group-form-container input {
     font-size: 15px; }
   .create-group-form-container input[type="text"] {
@@ -339,7 +348,17 @@ Login page
     justify-content: space-between; }
   li > .d-g-right {
     padding-left: 10px;
-    padding-right: 20px; } }
+    padding-right: 20px; }
+  .dash-borrowed-books {
+    padding: 30px; }
+  .dash-borrowed-books div:first-child {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #95989A; }
+  .dash-borrowed-books div:last-child li {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0; } }
 
 @media (min-width: 420px) {
   /*------------------------------------------------------------
