--- a/public/main.css
+++ b/public/main.css
@@ -433,7 +433,40 @@ Login page
   .dash-books-lent div:first-child {
     border-bottom: 1px solid #95989A; }
   .dash-books-lent ul li {
-    margin: 13px 0; } }
+    margin: 13px 0; }
+  /*------------------------------------------------------------
+    Group
+    -------------------------------------------------------------*/
+  .group-head {
+    width: 100%;
+    height: 100px;
+    border: 1px solid red; }
+  .m-group-headers-container {
+    padding: 30px;
+    padding-bottom: none; }
+  .m-group-headers-container div {
+    display: flex;
+    margin: 10px 0; }
+  .m-group-headers-container div {
+    margin-right: 20px; }
+  .m-group button {
+    font-size: 14px;
+    padding: 5px 0;
+    width: 120px; }
+  .m-group-info-headers {
+    padding: 0 30px; }
+  .m-group-info-headers div {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #95989A;
+    border-bottom: 1px solid #95989A; }
+  .m-group-item {
+    padding: 30px;
+    padding-top: 0; }
+  .m-group-item li {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0; } }
 
 @media (min-width: 420px) {
   /*------------------------------------------------------------
