--- a/client/main.scss
+++ b/client/main.scss
@@ -523,6 +523,10 @@ Login page
     /*------------------------------------------------------------
     Group
     -------------------------------------------------------------*/
+    .m-group {
+        display: flex;
+        flex-direction: column;
+    }
     .group-head {
         width: 100%;
         height: 100px;
@@ -530,19 +534,85 @@ Login page
     }
     .m-group-headers-container {
         padding: 30px;
-        padding-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 15px;
     }
     .m-group-headers-container div {
         display: flex;
-        margin: 10px 0;
+    }
+    .m-group-headers-container div h2{
+        margin-bottom: 5px;
+    }
+    .m-group-headers-container div h5{
+        margin-right: 10px;
     }
     .m-group-headers-container div {
         margin-right: 20px;
     }
+    .m-group>h5 {
+        color: $success;
+        align-self: center;
+    }
+    .m-group .btn-container {
+        display: flex;
+        justify-content: space-around;
+        padding: 0 30px;
+        margin: 20px 0;
+    }
     .m-group button {
+        padding: 8px 0;
+        font-size: 16px;
+        background-color: $cancel;
+        width: 80%;
+        color: white;
+        align-self: center;
+        margin-bottom: 15px;
+    }
+    .m-group .btn-container button {
         font-size: 14px;
         padding: 5px 0;
         width: 120px;
+        color: white;
+    }
+    .m-group .btn-container button:first-child {
+        background-color: $info;
+    }
+    .m-group .btn-container button:last-child {
+        background-color: $success;
+    }
+    .m-group form {
+        display: flex;
+        flex-direction: column;
+        padding: 0 30px;
+        margin: 20px 0;
+    }
+    .m-form-errors-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    .m-form-errors-container h4 {
+        color: $err;
+    }
+    .m-group form input{
+        font-size: 14px;
+    }
+    .m-group form input[type='text']{
+        border: 1px solid $greyBorder;
+        padding: 5px;
+    }
+    .m-group form input[type='submit']{
+        color: white;
+        background-color: $info;
+        padding: 10px;
+        margin: 15px 0;
+    }
+    .m-group form input[type='button']{
+        color: white;
+        background-color: $cancel;
+        padding: 10px;
+        margin-bottom: 15px;
     }
     .m-group-info-headers {
         padding: 0 30px;
@@ -562,7 +632,9 @@ Login page
         justify-content: space-between;
         margin: 10px 0;
     }
-
+    .m-group-item li a {
+        margin-right: 5px;
+    }
 }
 
 //--------------------------------------------------------------
