--- a/public/main.css
+++ b/public/main.css
@@ -402,8 +402,17 @@ Login page
     border-bottom: 1px solid #95989A; }
   .dash-collection ul li {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     margin: 10px 0; }
+  .dash-collection ul li div:first-child {
+    display: flex;
+    justify-content: space-between; }
+  .dash-collection ul li div button {
+    font-size: 12px; }
+  .dash-collection ul li div:last-child h6 {
+    margin: 5px 0; }
+  .dash-collection div ul li div .m-dash-remove-from-group-btn {
+    background-color: #06D4FF; }
   .dash-notifications {
     padding: 30px; }
   .dash-notifications > div:first-child {
