--- a/client/main.scss
+++ b/client/main.scss
@@ -50,6 +50,7 @@ a:hover {
 ul {
     list-style: none;
 }
+
 /*------------------------------------------------------------
 Navbar
 -------------------------------------------------------------*/
@@ -57,6 +58,8 @@ Navbar
     width: 100%;
     background-color: $navBg;
     display: flex;
+    height: 80px;
+    padding: 5px 10px;
 }
 .nav-left {
     width: 30%;
@@ -70,8 +73,48 @@ Navbar
     width: 70%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    justify-content: space-around;
+    justify-content: flex-end;
+}
+.dropdown-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 55px;
+    height: 40px;
+}
+.dropdown-menu {
+    position: absolute;
+    right: 0%;
+    top: -100%;
+    background-color: $navBg;
+}
+.v-line {
+    width: 100%;
+    height: 0px;
+    border: 1px solid white;
+}
+.dropdown-menu button {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    background-color: $transparentBg;
+    color: white;
+    padding: 20px 30px;
+}
+.dropdown-menu li {
+    border-top: 1px solid #95989A;
+}
+.dropdown-slideIn {
+    animation: navDropdown;
+    animation-duration: .6s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+.dropdown-slideOut {
+    animation: navDropdownReverse;
+    animation-duration: .6s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 /*------------------------------------------------------------
 Landing Page
@@ -243,61 +286,11 @@ Login page
         background-color: $btnBg;
         color: white;
     }
-    .v-line {
-        width: 100%;
-        height: 0px;
-        border: 1px solid white;
-    }
-    .dropdown-slideIn {
-       animation: navDropdown;
-       animation-duration: .6s;
-       animation-iteration-count: 1;
-       animation-fill-mode: forwards;
-    }
-    .dropdown-slideOut {
-        animation: navDropdownReverse;
-        animation-duration: .6s;
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
-    }
     /*------------------------------------------------------------
     Navbar
     -------------------------------------------------------------*/
-    .navbar {
-        height: 80px;
-        padding: 5px 10px;
-    }
-    .nav-right .btn {
-        display: none;
-    }
     .nav-right {
         padding-right: 15px;
-        justify-content: flex-end;
-    }
-    .dropdown-icon {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 55px;
-        height: 40px;
-    }
-
-    .dropdown-menu {
-        position: absolute;
-        right: 0%;
-        top: -100%;
-        background-color: $navBg;
-    }
-    .dropdown-menu button {
-        width: 100%;
-        height: 100%;
-        font-size: 18px;
-        background-color: $transparentBg;
-        color: white;
-        padding: 20px 30px;
-    }
-    .dropdown-menu li {
-        border-top: 1px solid #95989A;
     }
     /*------------------------------------------------------------
     Landing Page
@@ -653,10 +646,15 @@ Login page
         margin-right: 5px;
     }
 }
-
 //--------------------------------------------------------------
 //Desktop/Landscape view
 @media (min-width: 420px) {
+    /*------------------------------------------------------------
+    Navbar
+    -------------------------------------------------------------*/
+    //Nav right
+    .dropdown-icon {
+    }
     /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
