--- a/public/main.css
+++ b/public/main.css
@@ -36,7 +36,9 @@ Navbar
 .navbar {
   width: 100%;
   background-color: rgba(15, 10, 10, 0.85);
-  display: flex; }
+  display: flex;
+  height: 80px;
+  padding: 5px 10px; }
 
 .nav-left {
   width: 30%;
@@ -50,8 +52,48 @@ Navbar
   width: 70%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  justify-content: space-around; }
+  justify-content: flex-end; }
+
+.dropdown-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 55px;
+  height: 40px; }
+
+.dropdown-menu {
+  position: absolute;
+  right: 0%;
+  top: -100%;
+  background-color: rgba(15, 10, 10, 0.85); }
+
+.v-line {
+  width: 100%;
+  height: 0px;
+  border: 1px solid white; }
+
+.dropdown-menu button {
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  background-color: transparent;
+  color: white;
+  padding: 20px 30px; }
+
+.dropdown-menu li {
+  border-top: 1px solid #95989A; }
+
+.dropdown-slideIn {
+  animation: navDropdown;
+  animation-duration: .6s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; }
+
+.dropdown-slideOut {
+  animation: navDropdownReverse;
+  animation-duration: .6s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; }
 
 /*------------------------------------------------------------
 Landing Page
@@ -220,51 +262,11 @@ Login page
     height: 30px;
     background-color: #42f4d4;
     color: white; }
-  .v-line {
-    width: 100%;
-    height: 0px;
-    border: 1px solid white; }
-  .dropdown-slideIn {
-    animation: navDropdown;
-    animation-duration: .6s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards; }
-  .dropdown-slideOut {
-    animation: navDropdownReverse;
-    animation-duration: .6s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards; }
   /*------------------------------------------------------------
     Navbar
     -------------------------------------------------------------*/
-  .navbar {
-    height: 80px;
-    padding: 5px 10px; }
-  .nav-right .btn {
-    display: none; }
   .nav-right {
-    padding-right: 15px;
-    justify-content: flex-end; }
-  .dropdown-icon {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 55px;
-    height: 40px; }
-  .dropdown-menu {
-    position: absolute;
-    right: 0%;
-    top: -100%;
-    background-color: rgba(15, 10, 10, 0.85); }
-  .dropdown-menu button {
-    width: 100%;
-    height: 100%;
-    font-size: 18px;
-    background-color: transparent;
-    color: white;
-    padding: 20px 30px; }
-  .dropdown-menu li {
-    border-top: 1px solid #95989A; }
+    padding-right: 15px; }
   /*------------------------------------------------------------
     Landing Page
     -------------------------------------------------------------*/
@@ -540,6 +542,9 @@ Login page
     margin-right: 5px; } }
 
 @media (min-width: 420px) {
+  /*------------------------------------------------------------
+    Navbar
+    -------------------------------------------------------------*/
   /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
