--- a/public/main.css
+++ b/public/main.css
@@ -454,6 +454,8 @@ Login page
   /*------------------------------------------------------------
     Group
     -------------------------------------------------------------*/
+  .group {
+    display: none; }
   .m-group {
     display: flex;
     flex-direction: column; }
@@ -597,4 +599,9 @@ Login page
     margin: 5px; }
   .dash-section:last-child li div:last-child {
     display: flex;
-    justify-content: space-between; } }
+    justify-content: space-between; }
+  /*------------------------------------------------------------
+    Group
+    -------------------------------------------------------------*/
+  .m-group {
+    display: none; } }
