--- a/public/main.css
+++ b/public/main.css
@@ -604,4 +604,37 @@ Login page
     Group
     -------------------------------------------------------------*/
   .m-group {
-    display: none; } }
+    display: none; }
+  .group {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .group-container {
+    width: 95%;
+    height: 85%;
+    border: 1px solid #95989A;
+    padding: 20px;
+    display: flex;
+    flex-direction: column; }
+  .group-container div:last-child {
+    display: flex;
+    flex-grow: 1; }
+  .group-container div:first-child h4 {
+    margin: 10px 0; }
+  .group-section {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    border-right: 1px solid #95989A;
+    padding: 20px; }
+  .group-section:last-child {
+    border: none; }
+  .group-section:nth-child(2) {
+    flex-grow: 3; }
+  .group-section h3 {
+    margin-bottom: 20px; }
+  .group-section .item-overflow {
+    flex-grow: 1;
+    overflow: auto; } }
