signup login complete

--- a/client/main.scss
+++ b/client/main.scss
@@ -665,6 +665,18 @@ Login page
     Navbar
     -------------------------------------------------------------*/
     /*------------------------------------------------------------
+    Login
+    -------------------------------------------------------------*/
+    .login {
+        background-position: bottom;
+    }
+    /*------------------------------------------------------------
+    Signup
+    -------------------------------------------------------------*/
+    .signup {
+        background-position: bottom;
+    }
+    /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
     .dash-m {
