--- a/public/main.css
+++ b/public/main.css
@@ -558,6 +558,16 @@ Login page
     Navbar
     -------------------------------------------------------------*/
   /*------------------------------------------------------------
+    Login
+    -------------------------------------------------------------*/
+  .login {
+    background-position: bottom; }
+  /*------------------------------------------------------------
+    Signup
+    -------------------------------------------------------------*/
+  .signup {
+    background-position: bottom; }
+  /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
   .dash-m {
