--- a/public/main.css
+++ b/public/main.css
@@ -72,7 +72,8 @@ Navbar
   position: absolute;
   right: 0%;
   top: -100%;
-  background-color: rgba(15, 10, 10, 0.85); }
+  background-color: rgba(15, 10, 10, 0.85);
+  z-index: 5; }
 
 .v-line {
   width: 100%;
@@ -302,7 +303,15 @@ Login page
   .dash-head {
     width: 100%;
     height: 100px;
-    border: 1px solid red; }
+    position: relative;
+    background-image: url(b4eeb287ea1d83e6032dacd443a15655.jpg);
+    background-size: cover;
+    background-position: center; }
+  .dash-head h3 {
+    position: absolute;
+    bottom: 20%;
+    left: 10%;
+    color: white; }
   .dash-nav-container {
     width: 100%;
     height: 100px;
@@ -437,29 +446,37 @@ Login page
   .dash-notifications ul li {
     padding: 15px;
     border: 1px solid #95989A;
-    display: flex;
-    margin: 15px 0;
-    justify-content: space-between; }
-  .dash-notifications ul li div {
+    margin: 15px 0; }
+  .dash-notifications ul li div:last-child {
     display: flex;
     flex-direction: column;
-    flex-grow: 3; }
-  .dash-notifications ul li button {
+    flex-grow: 1; }
+  .dash-notifications ul li div:first-child {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1; }
+  .dash-notifications ul li div:first-child h6 {
+    margin-bottom: 7px; }
+  .dash-notifications ul li div button {
     font-size: 12px;
     color: white;
-    width: 90px;
-    height: 30px; }
+    height: 30px;
+    width: 100%;
+    margin: 10px 0; }
   .dash-notifications ul li button:first-child {
     background-color: #03EB60; }
   .dash-notifications ul li button:last-child {
-    background-color: #d9534f;
-    margin-left: 10px; }
+    background-color: #d9534f; }
   .dash-books-lent {
     padding: 30px; }
-  .dash-books-lent div:first-child {
+  .dash-books-lent > div:first-child {
     border-bottom: 1px solid #95989A; }
   .dash-books-lent ul li {
     margin: 13px 0; }
+  .dash-books-lent ul li div {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 0; }
   /*------------------------------------------------------------
     Group
     -------------------------------------------------------------*/
