--- a/public/main.css
+++ b/public/main.css
@@ -596,6 +596,34 @@ Login page
   /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
+  #dash-create-group {
+    width: 400px;
+    height: 300px;
+    padding: 30px 50px;
+    background-color: white;
+    border: 1px solid #95989A;
+    border-radius: 15px;
+    align-items: center;
+    position: absolute;
+    flex-direction: column;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -150px;
+    top: 50%;
+    z-index: 2; }
+  #dash-create-group input {
+    font-size: 18px;
+    padding: 10px 15px;
+    margin: 15px 0;
+    width: 100%; }
+  #dash-create-group input[type="text"] {
+    border: 1px solid #95989A; }
+  #dash-create-group input:not([type="text"]) {
+    color: white; }
+  #dash-create-group input:nth-child(2) {
+    background-color: #03EB60; }
+  #dash-create-group input:last-child {
+    background-color: #d9534f; }
   .dash-m {
     display: none; }
   .dash {
@@ -611,7 +639,14 @@ Login page
     padding: 20px;
     border: 1px solid #95989A; }
   .dash-container .dash-section:first-child {
-    flex-grow: 1; }
+    flex-grow: 1;
+    max-width: 20%; }
+  .dash-container .dash-section:nth-child(2) {
+    max-width: 30%; }
+  .dash-container .dash-section:nth-child(3) {
+    max-width: 20%; }
+  .dash-container .dash-section:last-child {
+    max-width: 30%; }
   .dash-section {
     display: flex;
     flex-direction: column;
@@ -622,18 +657,22 @@ Login page
     border: none; }
   .dash-section .item-overflow {
     flex-grow: 1;
-    overflow: auto; }
+    overflow: auto;
+    margin-bottom: 20px; }
   .dash-section h2 {
     text-align: center;
     margin-bottom: 20px; }
   .dash-section li {
     margin: 15px 0; }
   .dash-section button {
-    font-size: 18px;
+    font-size: 16px;
     color: white;
     background-color: #06D4FF;
     height: 40px;
-    width: 170px; }
+    width: 170px;
+    margin: 0 10px; }
+  .dash-section:first-child button {
+    margin: 0; }
   .dash-section:nth-child(2) > div:last-child {
     display: flex;
     justify-content: space-between; }
