--- a/public/main.css
+++ b/public/main.css
@@ -302,6 +302,10 @@ Login page
   /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
+  #dash-create-group {
+    display: none !important; }
+  #dash-add-collection {
+    display: none !important; }
   .dash {
     display: none; }
   .dash-head {
@@ -611,18 +615,33 @@ Login page
     margin-top: -150px;
     top: 50%;
     z-index: 2; }
-  #dash-create-group input {
+  #dash-add-collection {
+    width: 400px;
+    height: 450px;
+    padding: 30px 50px;
+    background-color: white;
+    border: 1px solid #95989A;
+    border-radius: 15px;
+    align-items: center;
+    position: absolute;
+    flex-direction: column;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -220px;
+    top: 50%;
+    z-index: 2; }
+  #dash-create-group input, #dash-add-collection input {
     font-size: 18px;
     padding: 10px 15px;
     margin: 15px 0;
     width: 100%; }
-  #dash-create-group input[type="text"] {
+  #dash-create-group input[type="text"], #dash-add-collection input[type="text"] {
     border: 1px solid #95989A; }
-  #dash-create-group input:not([type="text"]) {
+  #dash-create-group input:not([type="text"]), #dash-add-collection input:not([type="text"]) {
     color: white; }
-  #dash-create-group input:nth-child(2) {
+  #dash-create-group input[type="submit"], #dash-add-collection input[type="submit"] {
     background-color: #03EB60; }
-  #dash-create-group input:last-child {
+  #dash-create-group input[type="button"], #dash-add-collection input[type="button"] {
     background-color: #d9534f; }
   .dash-m {
     display: none; }
@@ -658,7 +677,8 @@ Login page
   .dash-section .item-overflow {
     flex-grow: 1;
     overflow: auto;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    word-break: break-all; }
   .dash-section h2 {
     text-align: center;
     margin-bottom: 20px; }
@@ -671,6 +691,8 @@ Login page
     height: 40px;
     width: 170px;
     margin: 0 10px; }
+  .dash-section:nth-child(2) div button:last-child {
+    background-color: #d9534f; }
   .dash-section:first-child button {
     margin: 0; }
   .dash-section:nth-child(2) > div:last-child {
