--- a/public/main.css
+++ b/public/main.css
@@ -505,7 +505,15 @@ Login page
   .group-head {
     width: 100%;
     height: 100px;
-    border: 1px solid red; }
+    background-image: url(f259c81c43693db14542f9029d95ef8c.jpg);
+    background-size: cover;
+    background-position: bottom;
+    position: relative; }
+  .group-head h3 {
+    position: absolute;
+    left: 10%;
+    bottom: 20%;
+    color: white; }
   .m-group-headers-container {
     padding: 30px;
     padding-bottom: 0;
@@ -585,7 +593,42 @@ Login page
     justify-content: space-between;
     margin: 10px 0; }
   .m-group-item li a {
-    margin-right: 5px; } }
+    margin-right: 5px; }
+  /*------------------------------------------------------------
+    Book
+    -------------------------------------------------------------*/
+  .m-book-container {
+    padding: 30px;
+    display: flex;
+    flex-direction: column; }
+  .m-book-head {
+    width: 100%;
+    height: 100px;
+    position: relative;
+    background-image: url(a20fba4f0cdcf3655b83897906036e43.jpg);
+    background-size: cover;
+    background-position: bottom; }
+  .m-book-head h3 {
+    position: absolute;
+    bottom: 20%;
+    left: 10%;
+    color: white; }
+  .m-book-container h3:first-child {
+    align-self: center;
+    margin: 10px 0;
+    word-break: break-all; }
+  .m-book-container h5 {
+    align-self: center;
+    word-break: break-all;
+    margin-bottom: 40px; }
+  .m-book-container h4 {
+    margin: 10px 0; }
+  .m-book.container button {
+    padding: 8px 0;
+    color: white;
+    background-color: info;
+    font-size: 18px;
+    margin: 10px 0; } }
 
 @media (min-width: 420px) {
   /*------------------------------------------------------------
