borrow request accept

--- a/client/main.scss
+++ b/client/main.scss
@@ -744,10 +744,10 @@ Login page
     .m-book-container h4 {
         margin: 10px 0;
     }
-    .m-book.container button {
+    .m-book-container button {
         padding: 8px 0;
         color: white;
-        background-color: info;
+        background-color: $info;
         font-size: 18px;
         margin: 10px 0;
     }
